Fetch the name from /name onload

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -12,7 +12,7 @@
   <script src="fetchScript.js"></script>
 </head>
 
-<body>
+<body onload="showServerHello()">
   <!-- Intro -->
   <header>
     <nav>
@@ -27,7 +27,7 @@
     <div id="About">
       <div>
         <img src="SRC/ProfilePhoto.jpg" alt="Photo of Rodrigo Saucedo" class="profilePhoto" />
-        <h1>José Rodrigo Saucedo Cruz</h1>
+        <h1></h1>
         <h2>Computer Science Student</h2>
       </div>
     </div>
