Add h3 for the facts, and a form for the POST

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -29,6 +29,7 @@
         <img src="SRC/ProfilePhoto.jpg" alt="Photo of Rodrigo Saucedo" class="profilePhoto" />
         <h1></h1>
         <h2>Computer Science Student</h2>
+        <h3></h3>
       </div>
     </div>
   </header>
@@ -110,6 +111,13 @@
   <footer id="Contact">
     <div>
       <h2>Let's Keep in Touch!</h2>
+
+      <form action="/form-handler" method="POST">
+        <p>Leave your feedback or contact info:</p>
+        <textarea name="text-input">Type here</textarea>
+        <br/>
+        <input type="submit" />
+      </form>
 
       <!-- Social media and contact links. Add or remove any networks. -->
       <div>
