Clear on focus to the contact form

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -114,7 +114,7 @@
 
       <form action="/form-handler" method="POST">
         <p>Leave your feedback or contact info:</p>
-        <textarea name="text-input">Type here</textarea>
+        <textarea name="text-input" type="text" onfocus="this.value=''">Type Here</textarea>
         <br/>
         <input type="submit" />
       </form>
